Swagger 설정 추가_0602
REST API Docs. -> Swagger 채택 후 적용.

--- a/build.gradle
+++ b/build.gradle
@@ -30,12 +30,18 @@ dependencies {
 	annotationProcessor 'org.projectlombok:lombok'
 	providedRuntime 'org.springframework.boot:spring-boot-starter-tomcat'
 
+	//swagger dependency
+	compile group: 'io.springfox', name: 'springfox-swagger2', version: '2.7.0'
+	compile group: 'io.springfox', name: 'springfox-swagger-ui', version: '2.7.0'
+
 	testImplementation('org.springframework.boot:spring-boot-starter-test') {
 		exclude group: 'org.junit.vintage', module: 'junit-vintage-engine'
 	}
 	testImplementation 'org.springframework.restdocs:spring-restdocs-mockmvc'
     implementation 'junit:junit:4.12'
 }
+
+
 
 test {
 	outputs.dir snippetsDir
