logging 설정&properties 분리
- logging 설정을 통한 log 파일 셋팅
- 민감정보(id/pw..)는 별도 파일로 관리하기 위해 분리 작업 진행

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -41,16 +41,26 @@ spring.jackson.time-zone= UTC
 
 
 ######## mail Setting #################
-## mail default setting
-spring.mail.default-encoding=UTF-8
-## mail custom server setting
-spring.mail.host=smtp.gmail.com
-spring.mail.port=587
-## 실제 관리자 계정.
-spring.mail.username=gmlwnrrj@gmail.com
-spring.mail.password=
-spring.mail.properties.mail.smtp.auth=true
-spring.mail.properties.mail.smtp.starttls.enable=true
-spring.mail.properties.mail.mime.charset=UTF-8
-spring.mail.properties.mail.transport.protocol=smtp
+##mailserver.properties의 설정정보를 가지고옴(민감정보 숨기기)
+mailserver.config=mailserver.properties
+
+##example sormat
+#spring.mail.default-encoding=UTF-8
+#spring.mail.host=smtp.gmail.com
+#spring.mail.port=587
+#spring.mail.username=test@gmail.com
+#spring.mail.password=test
+#spring.mail.properties.mail.smtp.auth=true
+#spring.mail.properties.mail.smtp.starttls.enable=true
+#spring.mail.properties.mail.mime.charset=UTF-8
+#spring.mail.properties.mail.transport.protocol=smtp
 #######################################
+
+
+################ Logging setting(logBack 설정) ###############################
+# 전체 Log level 설정
+logging.level.root=INFO
+# Group 별로 level 설정 가능
+logging.level.com.cloneproject.carrotmarket.controller=DEBUG
+logging.level.com.cloneproject.carrotmarket.service=DEBUG
+###############################################################
