--- a/src/test/application.properties
+++ b/src/test/application.properties
@@ -1,10 +1,8 @@
-test.application=test-application
-
 ## product name
-email.corpName=Carrot-market
+email.corpName=Carrot-market-test
 
 ##embeded tomcat server port setting
-server.port=9090
+server.port=9000
 
 ## Spring DATASOURCE (DataSourceAutoConfiguration & DataSourceProperties)
 #spring.datasource.url= jdbc:mysql://localhost:3306/carrotdb?useSSL=false&serverTimezone=UTC&useLegacyDatetimeCode=false&allowPublicKeyRetrieval=true
@@ -20,7 +18,6 @@ spring.datasource.password=
 
 ## Hibernate Properties
 
-
 ## The SQL dialect makes Hibernate generate better SQL for the chosen database
 #spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.MySQL5InnoDBDialect
 #spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.MariaDBDialect
@@ -35,7 +32,6 @@ logging.level.org.hibernate.type.descriptor.sql=trace
 spring.jpa.show-sql=true
 spring.jpa.properties.hibernate.format_sql=true
 spring.jpa.properties.hibernate.jdbc.lob.non_contextual_creation=true
-
 ## Initialize the datasource with available DDL and DML scripts
 spring.datasource.initialization-mode=always
 
@@ -43,19 +39,28 @@ spring.datasource.initialization-mode=always
 spring.jackson.serialization.WRITE_DATES_AS_TIMESTAMPS= false
 spring.jackson.time-zone= UTC
 
+
+
+##mailserver.properties의 설정정보를 가지고옴(민감정보 숨기기)
+mailserver.config=mailserver.properties
+
 ######## mail Setting #################
-## mail default setting
-spring.mail.default-encoding=UTF-8
-## mail custom server setting
-spring.mail.host=smtp.gmail.com
-spring.mail.port=587
-## 실제 관리자 계정
-spring.mail.username=gmlwnrrj@gmail.com
-spring.mail.password=
-spring.mail.properties.mail.smtp.auth=true
-spring.mail.properties.mail.smtp.starttls.enable=true
-spring.mail.properties.mail.mime.charset=UTF-8
-spring.mail.properties.mail.transport.protocol=smtp
+##example sormat
+#spring.mail.default-encoding=UTF-8
+#spring.mail.host=smtp.gmail.com
+#spring.mail.port=587
+#spring.mail.username=test@gmail.com
+#spring.mail.password=test
+#spring.mail.properties.mail.smtp.auth=true
+#spring.mail.properties.mail.smtp.starttls.enable=true
+#spring.mail.properties.mail.mime.charset=UTF-8
+#spring.mail.properties.mail.transport.protocol=smtp
 #######################################
 
-
+################ Logging setting(logBack 설정) ###############################
+# 전체 Log level 설정
+logging.level.root=INFO
+# Group 별로 level 설정 가능
+logging.level.com.cloneproject.carrotmarket.controller=DEBUG
+logging.level.com.cloneproject.carrotmarket.service=DEBUG
+###############################################################
