단위 테스트
단위 테스트..

--- a/src/test/resources/application_test.properties
+++ b/src/test/resources/application_test.properties
@@ -1,5 +1,6 @@
 ## product name
 email.corpName=Carrot-market-test
+maxRows=10000
 
 ##embeded tomcat server port setting
 server.port=9000
@@ -19,9 +20,9 @@ spring.datasource.password=
 ## Hibernate Properties
 
 ## The SQL dialect makes Hibernate generate better SQL for the chosen database
-#spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.MySQL5InnoDBDialect
+spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.MySQL5InnoDBDialect
 #spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.MariaDBDialect
-spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.H2Dialect
+#spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.H2Dialect
 
 spring.jpa.hibernate.ddl-auto=update
 ## 서버실행 시점에서 Table Drop&Create 함.
