directory 구조 변경
directory 구조 변경

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,31 +1,40 @@
 ## product name
 email.corpName=Carrot-market
-
+maxRows=1000
 ##embeded tomcat server port setting
 server.port=9000
 
 ## Spring DATASOURCE (DataSourceAutoConfiguration & DataSourceProperties)
-#spring.datasource.url= jdbc:mysql://localhost:3306/carrotdb?useSSL=false&serverTimezone=UTC&useLegacyDatetimeCode=false&allowPublicKeyRetrieval=true
-##spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
-#spring.datasource.username=root
-#spring.datasource.password=root
+spring.datasource.url= jdbc:mysql://localhost:3306/carrotdb?useSSL=false&serverTimezone=UTC&useLegacyDatetimeCode=false&allowPublicKeyRetrieval=true
+spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
+spring.datasource.username=root
+spring.datasource.password=root
 
-spring.h2.console.enabled=true
-spring.datasource.url= jdbc:h2:mem:testdb
-spring.datasource.driver-class-name=org.h2.Driver
-spring.datasource.username=sa
-spring.datasource.password=
+#spring.h2.console.enabled=true
+#spring.datasource.url= jdbc:h2:mem:testdb
+#spring.datasource.driver-class-name=org.h2.Driver
+#spring.datasource.username=sa
+#spring.datasource.password=
 
 ## Hibernate Properties
 
 ## The SQL dialect makes Hibernate generate better SQL for the chosen database
-#spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.MySQL5InnoDBDialect
+spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.MySQL5InnoDBDialect
 #spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.MariaDBDialect
-spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.H2Dialect
+#spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.H2Dialect
 
-spring.jpa.hibernate.ddl-auto=update
-## 서버실행 시점에서 Table Drop&Create 함.
-#spring.jpa.hibernate.ddl-auto=create
+
+## JPA를 통한 DB 초기화 전략 옵션값은 none, update, validate, create, create-drop
+##No change to the database structure.
+#spring.jpa.hibernate.ddl-auto=none
+##변경된 스키마가 있는지 확인만 한다. 만약 변경이 있다면 Application을 종료한다.
+#spring.jpa.hibernate.ddl-auto=validate
+## 서버실행 시점에서 Table Drop&Create 함.(위험)
+spring.jpa.hibernate.ddl-auto=create
+##시작과 종료에서 모두 drop한다.(위험)
+#spring.jpa.hibernate.ddl-auto=create-drop
+##변경된 스키마만 적용한다.
+#spring.jpa.hibernate.ddl-auto=update
 
 ## Hibernate Logging
 logging.level.org.hibernate.type.descriptor.sql=trace
@@ -33,7 +42,7 @@ spring.jpa.show-sql=true
 spring.jpa.properties.hibernate.format_sql=true
 spring.jpa.properties.hibernate.jdbc.lob.non_contextual_creation=true
 ## Initialize the datasource with available DDL and DML scripts
-spring.datasource.initialization-mode=always
+spring.datasource.initialization-mode=never
 
 ## Jackson Properties
 spring.jackson.serialization.WRITE_DATES_AS_TIMESTAMPS= false
@@ -45,7 +54,7 @@ spring.jackson.time-zone= UTC
 mailserver.config=mailserver.properties
 
 ######## mail Setting #################
-##example sormat
+##example format
 #spring.mail.default-encoding=UTF-8
 #spring.mail.host=smtp.gmail.com
 #spring.mail.port=587
